# xiaohongshu-Loop

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LOOP-STATE.md  LOOP-STATETiger.md  LOOP-STATExhs.md  README.md  SECURITY.md  build.gradle  docker-compose.yml  graph_chain.tiger.md  package-lock.json  requirements_factors.txt  requirements_veighna.txt  settings.gradle
data-lakehouse/: .gitignore  Dockerfile  README.md  analysis_report.md  analyze_streaming.py  analyze_userbehavior.py  analyze_userbehavior_deep.py  create_db.sql  docker-compose.yml  download_nyc_taxi.py  download_railway.py  duckdb_analytics.py  duckdb_railway_analytics.py  duckdb_railway_q7_q10.py  import_railway.py  init_iceberg.sql  list_charts.py  pvuv_insert.sql  pyproject.toml  pytest.ini  requirements.txt  sql-client-defaults.yaml  start.bat  test_railway.py  verify.py  verify_railway.py  viz_dashboard.py
data-lakehouse/docs/: ARCHITECTURE.md  DATASET.md
data-lakehouse/flink/conf/: all_jobs_combined.sql  catalogs.yaml  flink-conf.yaml  job_dwd.sql  job_filesystem.sql  run_all.sql  sql-client-defaults.yaml  step1_ddl.sql  step2_inserts.sql
data-lakehouse/flink/jobs/: 01_kafka_source.sql  02_iceberg_sink.sql  03_etl_job.sql  04_analytics.sql
data-lakehouse/flink/sql/: all_jobs_combined.sql  create_tables.sql  dwd_v2.sql  item_hot.sql  item_hot_v3.sql  pvuv.sql  pvuv_v2.sql
data-lakehouse/iceberg-rest/: Dockerfile
data-lakehouse/lakehouse_api/: __init__.py  client.py  main.py  seed.py
data-lakehouse/lakehouse_api/routers/: analytics.py  health.py
data-lakehouse/replay/: download_dataset.py  kafka_replay_producer.py  kafka_replay_producer_v2.py  producer2.err
data-lakehouse/scripts/: download-connectors.sh  startup.ps1  wait-for-it.sh
data-lakehouse/tests/: test_api.py
data-lakehouse/trino/etc/: config.properties  jvm.config  node.properties
data-lakehouse/trino/queries/: funnel.sql  pv_uv.sql  rfm_analysis.sql  topn_items.sql
donor-screener-pbp/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
donor-screener-pbp/data/: candidates.csv
donor-screener-pbp/pbp_api/: __init__.py  dataset.py  main.py
donor-screener-pbp/pbp_api/routers/: candidates.py  health.py
donor-screener-pbp/tests/: test_api.py
fraud-risk-engine/: .env.example  .gitignore  CHANGELOG.md  FAQ.md  README.md  SECURITY.md  pull-tigergraph.ps1  pyproject.toml  requirements.txt  requirements_optional.txt  run_backtest_smoke.py  start-server.bat
fraud-risk-engine/app/: __init__.py  api.py  cli.py  config.py  package.py  runner.py
fraud-risk-engine/app/benchmark/: __init__.py  ldbc_snb.py
fraud-risk-engine/app/detection/: __init__.py  funds_local.py  local_detector.py  models.py  tg_detector.py
fraud-risk-engine/app/eval/: __init__.py  backtest.py  graph_robustness.py  ldbc_snb_benchmark.py
fraud-risk-engine/app/loader/: __init__.py  bankfraud_loader.py  kaggle_auth.py  ldbc_snb_loader.py  medgraph_loader.py  paysim_converter.py  paysim_data.py  synth_generator.py  tg_loader.py
fraud-risk-engine/app/memory/: __init__.py  dynamic_memory.py  static_memory.py
fraud-risk-engine/app/profile/: __init__.py  graph_search.py
fraud-risk-engine/app/queries/: __init__.py  edge_features.py  fraud_queries.py  funds_queries.py  gdsl.py  ldbc_snb_queries.py
fraud-risk-engine/app/scheduler/: funds_monitor.py
fraud-risk-engine/app/schema/: __init__.py  graph_schema.py  ldbc_snb_schema.py
fraud-risk-engine/data/: bankfraud_cache.json
fraud-risk-engine/docs/: ARCHITECTURE-AUDIT.md  MEMORY-STATIC.md  TIGERGRAPH-OPENCYPHER-TUTORIAL.md
fraud-risk-engine/frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
fraud-risk-engine/frontend/src/: App.tsx  index.css  main.tsx
fraud-risk-engine/scripts/: download_ldbc_snb.sh  generate_ldbc_snb.py  migrate_ducklake.py  smoke_server.py  speed_test.py  test_ducklake.py  test_ducklake2.py
fraud-risk-engine/tests/: __init__.py  test_api.py  test_backtest.py  test_bankfraud.py  test_detection.py  test_edge_features.py  test_funds.py  test_funds_monitor.py  test_graph_robustness.py  test_ldbc_snb_benchmark.py  test_ldbc_snb_loader.py  test_medgraph.py  test_memory.py  test_profile_multihop.py  test_runner.py  test_schema_and_queries.py  test_synth_generator.py
xiaohongshu-saas/: .env.example  .gitignore  AI-AGENT-PLAN.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
xiaohongshu-saas/agents/xhs-account-guardian/: SKILL.md
xiaohongshu-saas/agents/xhs-channel-adapter/: SKILL.md
xiaohongshu-saas/agents/xhs-console-frontend/: SKILL.md
xiaohongshu-saas/agents/xhs-content-factory/: SKILL.md
xiaohongshu-saas/alembic/: env.py  script.py.mako
xiaohongshu-saas/app/: __init__.py  main.py
xiaohongshu-saas/app/ai/: __init__.py  (+2 more)
xiaohongshu-saas/deploy/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
xiaohongshu-saas/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
xiaohongshu-saas/docs/: AI-AGENT-ARCHITECTURE.md  AI-AGENT-DEMO.md  ROBUSTNESS-REPORT.md  rate_limit_probe_findings.md
xiaohongshu-saas/k8s/: README.md
xiaohongshu-saas/scripts/: auth_smoke.py  build.sh  deploy.ps1  deploy.sh  gateway_smoke.py  harvest_xhs_cookie.py  init_db.py  logs.ps1  logs.sh  push.ps1  rate_limit_probe.py  reconcile.sh  rollback.ps1  rollback.sh  seed_demo.py  seed_mgu_phd.py  seed_msu_invitation.py  status.ps1  status.sh  test_publish_e2e.py
xiaohongshu-saas/tests/: stress_test_consolidated.py  stress_test_consolidated_v2.py  test_ai_agents.py  test_ai_doc_loader_real.py  test_ai_mcp.py  test_ai_memory.py  test_ai_memory_redis.py  test_ai_prompts.py  test_ai_rag.py  test_ai_rag_chroma.py  test_ai_rate_limit_redis.py  test_ai_streaming.py  test_ai_tools.py  test_alerts.py  test_cache.py  test_coordinator_partial_failure.py  test_douyin_stub.py  test_events.py  test_factory.py  test_factory_agent_rewrite.py  test_gateway.py  test_metrics.py  test_real_llm.py  test_risk.py  test_scheduler_ai_mode.py  test_schemas.py
(+503 files in other folders)
