[project]
name = "lakehouse-api"
version = "0.1.0"
description = "data-lakehouse thin analytics API: PV/UV, conversion funnel, time-series, top-N. Backed by Trino (if reachable) or fallback seed data."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lakehouse_api*"]

[tool.ruff]
line-length = 110
target-version = "py310"