[project]
name = "pbp-api"
version = "0.1.0"
description = "donor-screener-pbp candidate scoring API - thin FastAPI wrapper exposing top-20 candidates, distribution, and per-candidate details."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pbp_api*"]

[tool.ruff]
line-length = 110
target-version = "py310"