[project]
name = "xhs-saas"
version = "0.1.0"
description = "Multi-channel social-media SaaS middleware, starting with auto-posting to Xiaohongshu (Little Red Book)."
authors = [{ name = "zhenyu666-debug" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",  # required by pydantic EmailStr (app/api/auth.py)
    "SQLAlchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.3",
    "APScheduler>=3.10",
    "httpx>=0.27",
    "playwright>=1.42",
    "tenacity>=8.2",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "black>=24.2",
    "mypy>=1.8",
]
ai = [
    "openai>=1.30",
]
monitoring = [
    "prometheus-client>=0.20",
    "sentry-sdk>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# F401 (unused imports) is tolerated project-wide: many re-export helpers and
# test fixtures import names for side effects (e.g. registering pytest fixtures,
# module-level mocks). Enforce it locally via `ruff check --select F401` instead
# of failing CI on existing legacy code.
ignore = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]