[project]
name = "xhs-saas"
version = "0.1.0"
description = "Multi-channel social-media SaaS middleware, starting with auto-posting to Xiaohongshu (Little Red Book)."
authors = [{ name = "zhenyu666-debug" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",  # required by pydantic EmailStr (app/api/auth.py)
    "SQLAlchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.3",
    "APScheduler>=3.10",
    "httpx>=0.27",
    "playwright>=1.42",
    "tenacity>=8.2",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "black>=24.2",
    "mypy>=1.8",
]
ai = [
    "openai>=1.30",
    "anthropic>=0.20",
    "chromadb>=0.4",
    "numpy>=1.24",
    "pypdf>=4.0",
    "tiktoken>=0.5",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "langgraph>=0.2,<0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-mcp-adapters>=0.1",
    "sentence-transformers>=2.7",
    "docx2txt>=0.8",
    "aiosqlite>=0.19",
    "redis>=5.0",
    "fakeredis>=2.20",  # in-memory redis for tests of the memory backend
]
monitoring = [
    "prometheus-client>=0.20",
    "sentry-sdk>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# F401 (unused imports) is tolerated project-wide: many re-export helpers and
# test fixtures import names for side effects (e.g. registering pytest fixtures,
# module-level mocks). Enforce it locally via `ruff check --select F401` instead
# of failing CI on existing legacy code.
ignore = ["F401"]
# scripts/* are one-screen operator smoke probes; try/except + early-return
# compact style is intentional. Don't fail CI on it.
[tool.ruff.lint.per-file-ignores]
"scripts/auth_smoke.py" = ["E401", "E701", "E702", "E722"]
"scripts/rate_limit_probe.py" = ["E402", "F541"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]